updated homework progress

--- a/Labs/Data_Types_and_Basic_Machine_Errors_in_Python.ipynb
+++ b/Labs/Data_Types_and_Basic_Machine_Errors_in_Python.ipynb
@@ -46,9 +46,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x = 2\n",
+      "x type: <class 'int'>\n",
+      "\n",
+      "cx = 2.0\n",
+      "cx type: <class 'float'>\n",
+      "\n",
+      "y = 1.2\n",
+      "y type: <class 'float'>\n",
+      "\n",
+      "cy = 1\n",
+      "cy type: <class 'int'>\n",
+      "\n",
+      "z = (1+2j)\n",
+      "z type: <class 'complex'>\n",
+      "\n",
+      "z*y = (1.2+2.4j)\n",
+      "z*y type: <class 'complex'>\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# 1\n",
     "x=2\n",
@@ -135,37 +160,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "#1\n",
+      "Equivalent?: True\n",
+      "\n",
+      "#2\n",
+      "int(0.5) =  0\n",
+      "int(0.99) =  0\n",
+      "\n",
+      "#3\n",
+      "int(100.5) =  100\n",
+      "int(100.99) =  100\n",
+      "\n",
+      "#4\n",
+      "my_round(0.4999) =  0\n",
+      "my_round(100.5) =  101\n",
+      "\n",
+      "#5\n",
+      "mylist: [True, 2, 0, 1, 0, 3.1425, -3.1425, False, 1, -1, 0, 0, 0.0, -0.0]\n",
+      "bool(mylist): [True, True, False, True, False, True, True, False, True, True, False, False, False, False]\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. comparison\n",
     "print('#1')\n",
-    "is_same = # your code\n",
+    "is_same = (z*y == z*(y + 0.j))\n",
     "print(f'Equivalent?: {is_same}')\n",
+    "\n",
     "\n",
     "# 2. type-cast\n",
     "print('\\n#2')\n",
+    "print('int(0.5) = ', int(0.5))\n",
+    "print('int(0.99) = ', int(0.99))\n",
     "\n",
     "\n",
     "# 3. type-cast\n",
     "print('\\n#3')\n",
+    "print('int(100.5) = ', int(100.5))\n",
+    "print('int(100.99) = ', int(100.99))\n",
     "\n",
     "\n",
-    "# 4. round to nearist integer (you need to add something before casting)\n",
+    "# 4. round to nearest integer (you need to add something before casting)\n",
     "print('\\n#4')\n",
     "\n",
+    "def my_round(x):\n",
+    "    return int(x + 0.5)\n",
+    "\n",
+    "print('my_round(0.4999) = ', my_round(0.4999))\n",
+    "print('my_round(100.5) = ', my_round(100.5))\n",
     "\n",
     "# 5. 'Boolean' is a number\n",
     "print('\\n#5')\n",
-    "## name your list: mylist\n",
     "\n",
-    "# your code\n",
+    "mylist = []\n",
+    "mylist.append(True)\n",
+    "mylist.append(True + 1)\n",
+    "mylist.append(True - 1)\n",
+    "mylist.append(True * 1)\n",
+    "mylist.append(True * 0)\n",
+    "mylist.append(True * 3.1425)\n",
+    "mylist.append(True * -3.1425)\n",
+    "mylist.append(False)\n",
+    "mylist.append(False + 1)\n",
+    "mylist.append(False - 1)\n",
+    "mylist.append(False * 1)\n",
+    "mylist.append(False * 0)\n",
+    "mylist.append(False * 3.1425)\n",
+    "mylist.append(False * -3.1425)\n",
     "\n",
     "print(f'mylist: {mylist}')\n",
-    "print(f'bool(mylist): {list(map(bool,mylist))}')"
+    "print(f'bool(mylist): {list(map(bool, mylist))}')\n",
+    "\n",
+    "# Discussion: Only 0 is matched with Boolean value False. All other non-zero floats are matched with True"
    ]
   },
   {
@@ -462,7 +537,36 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.5"
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
