--- a/Labs/Data_Types_and_Basic_Machine_Errors_in_Python.ipynb
+++ b/Labs/Data_Types_and_Basic_Machine_Errors_in_Python.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -261,33 +261,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "#1\n",
+      "rx64\n",
+      " [ 3.60571445  1.85595153  0.78926787 -2.75185088 -2.75204384 -3.5353311\n",
+      "  2.92940917  0.80892009  1.66458062 -3.83532405]\n",
+      "\n",
+      "rx32\n",
+      " [ 3.6057146  1.8559515  0.7892679 -2.7518508 -2.7520437 -3.535331\n",
+      "  2.9294093  0.8089201  1.6645806 -3.835324 ]\n",
+      "\n",
+      "rx64 - rx32\n",
+      " [-1.08275724e-07 -1.31314399e-08 -2.40296032e-08 -3.30309424e-08\n",
+      " -1.13250320e-07 -9.18359229e-08 -9.93187070e-08  8.51552517e-09\n",
+      "  3.87959762e-08  3.36239125e-09]\n",
+      "\n",
+      "#2\n",
+      "int32\n",
+      " [ 3  1  0 -2 -2 -3  2  0  1 -3]\n",
+      "\n",
+      "#3\n",
+      "\n",
+      "#4\n",
+      "\n",
+      "#5\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
     "# 1 type cast to float32\n",
     "print('#1')\n",
     "np.random.seed(42) # leave seed alone until all 5 problems and discussion are finished, then feel free to tinker.\n",
-    "isc = np.random.randint(5,high=10)\n",
-    "rx64 = (np.random.rand(10)-0.5)*isc\n",
-    "# your code\n",
+    "isc = np.random.randint(5, high=10)\n",
+    "rx64 = (np.random.rand(10) - 0.5) * isc\n",
+    "print('rx64\\n', rx64)\n",
+    "\n",
+    "rx32 = rx64.astype('float32')\n",
+    "print('\\nrx32\\n', rx32)\n",
+    "print('\\nrx64 - rx32\\n', rx64 - rx32)\n",
     "\n",
     "# 2 type cast to int32\n",
-    "print('#2')\n",
-    "# your code\n",
+    "print('\\n#2')\n",
+    "int32 = rx64.astype('int32')\n",
+    "print('int32\\n', int32)\n",
     "\n",
     "# 3 type cast to nearest int32\n",
-    "print('#3')\n",
+    "print('\\n#3')\n",
     "# your code\n",
     "\n",
     "# 4 dynamic type cast int32 array above to float64\n",
-    "print('#4')\n",
+    "print('\\n#4')\n",
     "# your code\n",
     "\n",
     "# 5 type cast to unsigned-int32\n",
-    "print('#4')\n",
+    "print('\\n#5')\n",
     "# your code\n"
    ]
   },
@@ -523,7 +558,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -537,7 +572,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.8"
   },
   "varInspector": {
    "cols": {
