--- a/Labs/Slurm/slurm.ipynb
+++ b/Labs/Slurm/slurm.ipynb
@@ -110,26 +110,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "8d685028-e777-478e-a21c-68ed01f29565",
+   "execution_count": 50,
+   "id": "50b55df4",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CORES               TMP_DISK            FREE_MEM            GRES                GRES_USED           \n",
-      "30                  0                   237891              (null)              gpu:0               \n",
+      "PARTITION      NODES     CORES     THREADS   NODELIST                                NODES(A/I)          \n",
+      "debug*         12        4         1         slurm-gp257-devel-compute-0-[0-11]      6/6                 \n",
+      "cpu            5         30        1         slurm-gp257-devel-compute-1-[0-4]       0/5                 \n",
+      "t4             10        8         1         slurm-gp257-devel-compute-2-[0-9]       0/10                \n",
+      "preempt        50        30        1         slurm-gp257-devel-compute-3-[0-49]      11/39               \n",
       "\n",
-      "MEMORY              PREEMPT_MODE        THREADS             TIMELIMIT           \n",
-      "238160              OFF                 1                   infinite            \n"
+      "PARTITION      NODES     FREE_MEM            MEMORY         GRES           PREEMPT_MODE   \n",
+      "debug*         12        23140-30752         31408          (null)         OFF            \n",
+      "cpu            5         237889-N/A          238160         (null)         OFF            \n",
+      "t4             10        55722-N/A           59240          gpu:1          OFF            \n",
+      "preempt        50        237875-237899       238160         (null)         OFF            \n",
+      "\n",
+      "PARTITION      NODES     PRIO_TIER      TIMELIMIT      JOB_SIZE       PORT           OVERSUBSCRIBE  \n",
+      "debug*         12        1              infinite       1-infinite     6818           NO             \n",
+      "cpu            5         1              infinite       1-infinite     6818           EXCLUSIVE      \n",
+      "t4             10        1              infinite       1-infinite     6818           EXCLUSIVE      \n",
+      "preempt        50        1              infinite       1-infinite     6818           EXCLUSIVE      \n"
      ]
     }
    ],
    "source": [
-    "!sinfo -n slurm-gp257-devel-compute-3-0 -O Cores,Disk,FreeMem,Gres,GresUsed\n",
+    "!sinfo -O Partition:15,Nodes:10,Cores:10,Threads:10,Nodelist:40,NodeAI:20\n",
     "print()\n",
-    "!sinfo -n slurm-gp257-devel-compute-3-0 -O Memory,PreemptMode,Threads,Time"
+    "!sinfo -O Partition:15,Nodes:10,FreeMem:20,Memory:15,Gres:15,PreemptMode:15\n",
+    "print()\n",
+    "!sinfo -O Partition:15,Nodes:10,PriorityTier:15,Time:15,Size:15,Port:15,OverSubscribe:15"
    ]
   },
   {
