updated logging lab

--- a/Labs/Logging_and_Argparse/Python_logging_and_argparse_lab.ipynb
+++ b/Labs/Logging_and_Argparse/Python_logging_and_argparse_lab.ipynb
@@ -222,10 +222,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting submit.sh\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile submit.sh\n",
+    "#!/bin/sh\n",
+    "#SBATCH --ntasks=1\n",
+    "#SBATCH --partition=preempt\n",
+    "#SBATCH --time=1:00:00\n",
+    "#SBATCH --mem=16GB\n",
+    "#SBATCH --cpus-per-task=1\n",
+    "\n",
+    "expr='file3/(file1+file2)*file4'\n",
+    "outfile='out.npz'\n",
+    "infile='labVec0.npz labVec1.npz labVec2.npz labVec3.npz'\n",
+    "\n",
+    "echo \"Computing is started at $(date).\"\n",
+    "spack load python@3.10.8\n",
+    "python3 ./npz_calc.py ${expr} --outfile ${outfile} --infile ${infile}\n",
+    "echo \"Computing is stopped at $(date).\""
+   ]
   }
  ],
  "metadata": {
