updated MPI Lab

--- a/Labs/MPI/Python_MPI_Matrix_Matrix_Multiplication.ipynb
+++ b/Labs/MPI/Python_MPI_Matrix_Matrix_Multiplication.ipynb
@@ -132,7 +132,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -146,9 +146,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.8.5"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "f212a5accd8bd9400f9e088cb9f91d932141bedc8912308be3f4dfceaa53a1c6"
+   }
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
