--- a/Labs/MPI/Python_MPI_Matrix_Matrix_Multiplication.ipynb
+++ b/Labs/MPI/Python_MPI_Matrix_Matrix_Multiplication.ipynb
@@ -43,12 +43,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Requirements\n",
-    "1. Stick with square $NxN$ matrices only\n",
-    "1. Parallelize over $M \\in \\mathbb{N}$ process, and be sure $\\sqrt{M} \\in \\mathbb{N}$ and that $N$ is evenly divisable by $\\sqrt{M}$. A good example is shown in **Figure-1** below, for the case where $N = 4$ and $M=4$ (notice that $N$ is evenly divisable by $\\sqrt{M} = 2$). Also, make sure your code works for both float32 matrices and float64 matrices. This can be done by using a varible for the numpy array *dtype*.\n",
+    "1. Stick with square $N \\times N$ matrices only\n",
+    "1. Parallelize over $M \\in \\mathbb{N}$ process, and be sure $\\sqrt{M} \\in \\mathbb{N}$ and that $N$ is evenly divisable by $\\sqrt{M}$. A good example is shown in **Figure-1** below, for the case where $N = 4$ and $M=4$ (notice that $N$ is evenly divisible by $\\sqrt{M} = 2$). Also, make sure your code works for both float32 matrices and float64 matrices. This can be done by using a varible for the numpy array *dtype*.\n",
     "1. In a \"real-world\" case, each process would likely read or fetch their respective data from the $\\mathbf A$ and $\\mathbf B$ matrices.  To mimic this, somewhat, for this lab, we will generate the data for each of these matrices using *np.random.rand()*. However, if you examine the first two cases in **Figure-1** you will notice that both processes use the same data from $\\mathbf A$, and the same is true for the 3rd and 4th cases. Futhermore, the 1st and 3rd processes use the same data from $\\mathbf B$, and the same is true for the 2nd and 4th processes. So, for your code:\n",
     "    * Create the data for each \"row-block\" of $\\mathbf A$ only once per block, and send it to all other processes that need that block, but not to the processes that don't need it.\n",
     "    * Similarly, create the data for each \"column-block\" of $\\mathbf B$ only once per block, then send it to all other processes that need that block, but not to processes that don't need it.\n",
