updated Numba Lab

--- a/Labs/Multicore_Parallelization_of_Matrix_Multiplication_Using_Numba.ipynb
+++ b/Labs/Multicore_Parallelization_of_Matrix_Multiplication_Using_Numba.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "533203a6",
    "metadata": {},
    "source": [
     "# GEOPHYS 257 (Winter 2023)\n",
@@ -41,7 +40,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a9957106",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +54,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1cc2aac",
    "metadata": {},
    "source": [
     "### Define a function-decorator for timing the runtime of your functions\n",
@@ -67,7 +64,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "efd0a801",
    "metadata": {
     "code_folding": []
    },
@@ -94,7 +90,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64cb7b5c",
    "metadata": {},
    "source": [
     "### Run the example function\n",
@@ -110,7 +105,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "fa466992",
    "metadata": {},
    "outputs": [
     {
@@ -139,17 +133,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b2e4c88",
    "metadata": {},
    "source": [
-    "### Discussion for Exercise 0 questions\n",
+    "## Discussion for Exercise 0 questions\n",
     "* For each factor-of-10 increase in $N$, the function runtime is also roughly 10 times longer.\n",
     "* This linear $O(N)$ slowdown makes sense. Within the function it creates a numpy array with size $N$, and the number of math operations also increases linearly with $N$."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2a8161fc",
    "metadata": {},
    "source": [
     "## Exercise 1: Naive matrix multiplication: \n",
@@ -212,8 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "a6404b75",
+   "execution_count": 4,
    "metadata": {
     "code_folding": [],
     "tags": [
@@ -284,8 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "44a3ede6-0a14-4c12-8b13-4bfe7bb147a3",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,14 +337,15 @@
     "        else:\n",
     "            print('Naive matmul is faster')\n",
     "            speedup = t2 / t1\n",
-    "\n",
+    "        \n",
+    "        print('Naive runtime: %.6f s' %t1)\n",
+    "        print('Numpy runtime: %.6f s' %t2)\n",
     "        print('Speed-up factor: %.3f' %speedup)\n",
     "        print('Error: %s' %compare_matmul(C1, C2))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "db232378",
    "metadata": {},
    "source": [
     "<br>\n",
@@ -364,8 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "ea011152",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -376,18 +366,24 @@
       "\n",
       "#1: Both A and B are float32\n",
       "Numpy function is faster\n",
-      "Speed-up factor: 2116.324\n",
-      "Error: 0.0018548965\n",
+      "Naive runtime: 0.169088 s\n",
+      "Numpy runtime: 0.000060 s\n",
+      "Speed-up factor: 2814.310\n",
+      "Error: 0.0022149086\n",
       "\n",
       "#2: A is float64, and B is float32\n",
       "Numpy function is faster\n",
-      "Speed-up factor: 1587.627\n",
-      "Error: 3.4305891460917337e-12\n",
+      "Naive runtime: 0.201134 s\n",
+      "Numpy runtime: 0.000084 s\n",
+      "Speed-up factor: 2396.642\n",
+      "Error: 3.4914293678411923e-12\n",
       "\n",
       "#3: Both A and B are float64\n",
       "Numpy function is faster\n",
-      "Speed-up factor: 2000.789\n",
-      "Error: 3.4128255776977312e-12\n"
+      "Naive runtime: 0.175261 s\n",
+      "Numpy runtime: 0.000072 s\n",
+      "Speed-up factor: 2434.099\n",
+      "Error: 3.4585667663122877e-12\n"
      ]
     }
    ],
@@ -403,8 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "74a400f9-0fbd-47ad-a8d6-c5e6bedca913",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -415,18 +410,24 @@
       "\n",
       "#1: Both A and B are float32\n",
       "Numpy function is faster\n",
-      "Speed-up factor: 2489.492\n",
-      "Error: 0.0018596649\n",
+      "Naive runtime: 0.177340 s\n",
+      "Numpy runtime: 0.000056 s\n",
+      "Speed-up factor: 3151.767\n",
+      "Error: 0.0027246475\n",
       "\n",
       "#2: A is float64, and B is float32\n",
       "Numpy function is faster\n",
-      "Speed-up factor: 1770.902\n",
-      "Error: 3.3448799285906716e-12\n",
+      "Naive runtime: 0.201891 s\n",
+      "Numpy runtime: 0.000110 s\n",
+      "Speed-up factor: 1836.859\n",
+      "Error: 3.424815986363683e-12\n",
       "\n",
       "#3: Both A and B are float64\n",
       "Numpy function is faster\n",
-      "Speed-up factor: 1634.441\n",
-      "Error: 3.4425795547576854e-12\n",
+      "Naive runtime: 0.168809 s\n",
+      "Numpy runtime: 0.000071 s\n",
+      "Speed-up factor: 2383.963\n",
+      "Error: 3.4710012641880894e-12\n",
       "\n",
       "---------------------------------------------------------------------------\n",
       "\n",
@@ -434,18 +435,24 @@
       "\n",
       "#1: Both A and B are float32\n",
       "Numpy function is faster\n",
-      "Speed-up factor: 6178.329\n",
-      "Error: 0.014881134\n",
+      "Naive runtime: 1.333306 s\n",
+      "Numpy runtime: 0.000244 s\n",
+      "Speed-up factor: 5461.221\n",
+      "Error: 0.042549133\n",
       "\n",
       "#2: A is float64, and B is float32\n",
       "Numpy function is faster\n",
-      "Speed-up factor: 4370.316\n",
-      "Error: 2.7110758082926623e-11\n",
+      "Naive runtime: 1.558181 s\n",
+      "Numpy runtime: 0.000434 s\n",
+      "Speed-up factor: 3590.926\n",
+      "Error: 2.772182483568031e-11\n",
       "\n",
       "#3: Both A and B are float64\n",
       "Numpy function is faster\n",
-      "Speed-up factor: 5150.084\n",
-      "Error: 2.773603569039551e-11\n",
+      "Naive runtime: 1.345670 s\n",
+      "Numpy runtime: 0.000215 s\n",
+      "Speed-up factor: 6257.370\n",
+      "Error: 2.793854037008714e-11\n",
       "\n",
       "---------------------------------------------------------------------------\n",
       "\n",
@@ -453,18 +460,24 @@
       "\n",
       "#1: Both A and B are float32\n",
       "Numpy function is faster\n",
-      "Speed-up factor: 25606.523\n",
-      "Error: 0.1199913\n",
+      "Naive runtime: 10.761670 s\n",
+      "Numpy runtime: 0.000526 s\n",
+      "Speed-up factor: 20452.068\n",
+      "Error: 0.23772812\n",
       "\n",
       "#2: A is float64, and B is float32\n",
       "Numpy function is faster\n",
-      "Speed-up factor: 15987.883\n",
-      "Error: 1.4313243923425034e-09\n",
+      "Naive runtime: 11.866493 s\n",
+      "Numpy runtime: 0.001447 s\n",
+      "Speed-up factor: 8200.969\n",
+      "Error: 2.2684076839141198e-10\n",
       "\n",
       "#3: Both A and B are float64\n",
       "Numpy function is faster\n",
-      "Speed-up factor: 16789.231\n",
-      "Error: 1.4339462950374582e-09\n",
+      "Naive runtime: 10.606133 s\n",
+      "Numpy runtime: 0.000597 s\n",
+      "Speed-up factor: 17765.713\n",
+      "Error: 2.2596680082642706e-10\n",
       "\n",
       "---------------------------------------------------------------------------\n",
       "\n"
@@ -481,7 +494,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae756d65",
+   "metadata": {},
+   "source": [
+    "## Discussion for Exercise 1 questions\n",
+    "* Numpy function np.dot() is much faster than naive matrix multiplication. With larger matrix sizes, the speedup of np.dot() becomes more significant. This is probably because with larger matrix sizes, the parallel part of the program becomes more dominant than the serial part.\n",
+    "* Typically, when both matrices are in float32 type, the runtime is the shortest. This is because float32 type has less significant digits (precision) and the operation is applied to fewer bytes of data. \n",
+    "* Similarly, this case has the largest speedup, but not so different from the case where both matrices are in float64 type. Potentially this is because with fewer digits, np.dot() optimization performs better.\n",
+    "* An interesting feature is that if two matrices have different float types, the runtime is usually the longest and the speedup is the smallest. This can be due to that before multiplication, there is an extra step to homogenize the inputs into the same type."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Exercise 2: Using Numba to speed up matrix multiplication: \n",
@@ -545,8 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "id": "4dc104d3",
+   "execution_count": 20,
    "metadata": {
     "code_folding": [],
     "tags": [
@@ -685,8 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
-   "id": "e8b072a7",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -754,8 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
-   "id": "cf9a40d1",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -847,7 +867,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4327e73a",
    "metadata": {},
    "source": [
     "<br>\n",
@@ -857,8 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
-   "id": "b6d3d475",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -871,27 +889,27 @@
       "\n",
       "Fastest method: np.dot()\n",
       "Best Numba permutation: numba_matmul_2\n",
-      "Speed-up over Numba functions: 6.16, 3.30, 3.86, 28.32, 3.57, 22.11\n",
+      "Speed-up over Numba functions: 16.81, 2.80, 13.90, 23.98, 9.56, 24.03\n",
       "\n",
       "---------------------------------------------------------------------------\n",
       "\n",
       "Square matrices, N = 256\n",
       "\n",
-      "Error: 1.423067885752971e-09\n",
+      "Error: 0.0\n",
       "\n",
       "Fastest method: np.dot()\n",
       "Best Numba permutation: numba_matmul_2\n",
-      "Speed-up over Numba functions: 11.96, 9.21, 12.05, 32.71, 9.54, 32.48\n",
+      "Speed-up over Numba functions: 46.65, 6.10, 41.91, 118.17, 24.92, 120.02\n",
       "\n",
       "---------------------------------------------------------------------------\n",
       "\n",
       "Square matrices, N = 512\n",
       "\n",
-      "Error: 1.578993646944582e-08\n",
+      "Error: 1.6109439116007707e-08\n",
       "\n",
       "Fastest method: np.dot()\n",
       "Best Numba permutation: numba_matmul_2\n",
-      "Speed-up over Numba functions: 190.83, 74.36, 257.25, 509.03, 77.17, 525.50\n",
+      "Speed-up over Numba functions: 102.49, 12.33, 104.42, 295.45, 42.95, 289.81\n",
       "\n",
       "---------------------------------------------------------------------------\n",
       "\n"
@@ -908,8 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
-   "id": "64889928",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -919,24 +936,24 @@
       "Square matrices, N = 128\n",
       "\n",
       "numba_matmul_2 is faster\n",
-      "Speed-up factor: 521.551\n",
-      "Error: 2.772182483568031e-11\n",
+      "Speed-up factor: 2574.797\n",
+      "Error: 2.7686297698892304e-11\n",
       "\n",
       "---------------------------------------------------------------------------\n",
       "\n",
       "Square matrices, N = 256\n",
       "\n",
       "numba_matmul_2 is faster\n",
-      "Speed-up factor: 544.372\n",
-      "Error: 2.2304647018245305e-10\n",
+      "Speed-up factor: 2726.335\n",
+      "Error: 2.1925217197349411e-10\n",
       "\n",
       "---------------------------------------------------------------------------\n",
       "\n",
       "Square matrices, N = 512\n",
       "\n",
       "numba_matmul_2 is faster\n",
-      "Speed-up factor: 559.970\n",
-      "Error: 1.7797816553866141e-09\n",
+      "Speed-up factor: 2231.254\n",
+      "Error: 1.7816859099184512e-09\n",
       "\n",
       "---------------------------------------------------------------------------\n",
       "\n"
@@ -954,7 +971,6 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "7a6b31f8",
    "metadata": {},
    "outputs": [
     {
@@ -998,7 +1014,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6c61afc",
    "metadata": {},
    "source": [
     "<br>\n",
@@ -1013,17 +1028,35 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a5170b1c",
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "862d5657",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Answer for Exercise 2\n",
+    "\n",
+    "1. The CPU cache management should cause the differences in performance. For example, the second case, which is the fastest one, has three loops organized in this way:\n",
+    "```python\n",
+    "for i in numba.prange(N):\n",
+    "    for k in range(K):\n",
+    "        for j in range(M):\n",
+    "            C[i, j] += A[i, k] * B[k, j]\n",
+    "```\n",
+    "Under this case, each matrix is accessed based on the order where the second index is in the inner loop compared to the first index. This is consistent with the 1-D array representation of the matrix, and the cache memory is best used since the new element is always near the previous one. By contrast, for the slowest permutations like $(k, j, i)$ and $(j, k, i)$, the order of indices is contradictory to the one stored in cache, so the cache keeps refreshing the storage.\n",
+    "\n",
+    "2. np.dot() is the fastest, because it uses BLAS library (Basic Linear Algebra Subprograms), which contains highly optimized algorithms for vector and matrix operations.\n",
+    "\n",
+    "3. Float32 type yields slightly faster computation than float64 type. The speedup factor is just around $1.01$-$1.05$, and appears to be decreasing as the matrix size $N$ goes up.\n",
+    "\n",
+    "4. The speedup factor for the fastest permutation function using Numba versus my_naive_matmul() is over $2000$. This indicates that the parallel portion of the program is significant. Based on Amdahl's law, assuming $1/(1-p) = 2000$, the parallel portion of the program is $p = 99.95\\%$. This is reasonable, as the original my_naive_matmul() has time complexity $O(N^3)$, and we have quite large matrix size $N$. On the other hand, as the matrix size $N$ goes up, the speedup factor is basically the same. From Amdahl's law, this suggests that the parallel portion $p$ is less influenced by matrix size $N$, given the processor number unchanged. Gustafson's law yields the same conclusion that $p$ does not grow as the problem scales, within the exercise range. The serial portion of the function should include: matrix dimension check, creating zero matrix $C$, and adding results to corresponding entries in $C$ after the element multiplication is done.\n",
+    "\n",
+    "5. Not all codes need to be parallelized. First, only the codes that contain parallel portion can be parallelized. A completely serial procedure can not be improved by having more processors, constrained by the order of operations. Second, the amount of parallel portion $p$ matters. Amdahl's law indicates that the maximum speedup factor is $1/(1-p)$. If the serial portion is too large, or the code already optimizes the major parallel portion, then probably you don't need to further make it parallelized. Third, coding time needs to be considered. Widely used subroutines should be parallelized with higher priority than less-called subroutines. For example, matrix multiplication is a basic step in linear algebra that is widely applied in many scientific areas. Therefore, we should consider to parallelize and optimize matrix multiplication, because we use it many times everyday.\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1037,7 +1070,36 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.8.5"
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
