updated MPI Lab

--- a/Labs/MPI/Python_MPI_Matrix_Matrix_Multiplication.ipynb
+++ b/Labs/MPI/Python_MPI_Matrix_Matrix_Multiplication.ipynb
@@ -124,11 +124,29 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Report"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| Matrix Size (N)      | Processors (M) | Float Type      | Run Time   |\n",
+    "| :---:                | :---:          | :---:           | :---:      |\n",
+    "| 20480                | 16             | Float32         | 38 s       |\n",
+    "| 20480                | 16             | Float64         | 67 s       |\n",
+    "| 20480                | 64             | Float32         | 84 s       |\n",
+    "| 20480                | 64             | Float64         | 115 s      |\n",
+    "| 40960                | 16             | Float32         | 101 s      |\n",
+    "| 40960                | 16             | Float64         | 152 s      |\n",
+    "| 40960                | 64             | Float32         | 175 s      |\n",
+    "| 40960                | 64             | Float64         | 341 s      |"
+   ]
   }
  ],
  "metadata": {
