--- a/Labs/Multicore_Parallelization_of_Matrix_Multiplication_Using_Numba.ipynb
+++ b/Labs/Multicore_Parallelization_of_Matrix_Multiplication_Using_Numba.ipynb
@@ -504,6 +504,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -558,7 +559,7 @@
     "    return C\n",
     "```\n",
     "    \n",
-    "6. Discuss your results in the markdown cell that follows your codes include in your discussion remarks about the questions asked in the markdown cell.\n",
+    "5. Discuss your results in the markdown cell that follows your codes include in your discussion remarks about the questions asked in the markdown cell.\n",
     "\n",
     "\n",
     "<br>\n",
@@ -1050,7 +1051,9 @@
     "\n",
     "4. The speedup factor for the fastest permutation function using Numba versus my_naive_matmul() is over $2000$. This indicates that the parallel portion of the program is significant. Based on Amdahl's law, assuming $1/(1-p) = 2000$, the parallel portion of the program is $p = 99.95\\%$. This is reasonable, as the original my_naive_matmul() has time complexity $O(N^3)$, and we have quite large matrix size $N$. On the other hand, as the matrix size $N$ goes up, the speedup factor is basically the same. From Amdahl's law, this suggests that the parallel portion $p$ is less influenced by matrix size $N$, given the processor number unchanged. Gustafson's law yields the same conclusion that $p$ does not grow as the problem scales, within the exercise range. The serial portion of the function should include: matrix dimension check, creating zero matrix $C$, and adding results to corresponding entries in $C$ after the element multiplication is done.\n",
     "\n",
-    "5. Not all codes need to be parallelized. First, only the codes that contain parallel portion can be parallelized. A completely serial procedure can not be improved by having more processors, constrained by the order of operations. Second, the amount of parallel portion $p$ matters. Amdahl's law indicates that the maximum speedup factor is $1/(1-p)$. If the serial portion is too large, or the code already optimizes the major parallel portion, then probably you don't need to further make it parallelized. Third, coding time needs to be considered. Widely used subroutines should be parallelized with higher priority than less-called subroutines. For example, matrix multiplication is a basic step in linear algebra that is widely applied in many scientific areas. Therefore, we should consider to parallelize and optimize matrix multiplication, because we use it many times everyday.\n"
+    "5. Not all codes need to be parallelized. First, only the codes that contain parallel portion can be parallelized. A completely serial procedure can not be improved by having more processors, constrained by the order of operations. Second, the amount of parallel portion $p$ matters. Amdahl's law indicates that the maximum speedup factor is $1/(1-p)$. If the serial portion is too large, or the code already optimizes the major parallel portion, then probably you don't need to further make it parallelized. Third, coding time needs to be considered. Widely used subroutines should be parallelized with higher priority than less-called subroutines. For example, matrix multiplication is a basic step in linear algebra that is widely applied in many scientific areas. Therefore, we should consider to parallelize and optimize matrix multiplication, because we use it many times everyday.\n",
+    "\n",
+    "6. (Extra) Both laws can be applied to analyze the speedup, since the processor number is never changed (i.e. always on my laptop). Generally, if the problem size is fixed and we study the speedup as a function of processor number, Amdahl's law is relevant. If the problem size (matrix size here) also scales with increasing number of processors, then Gustafson's law is more relevant.\n"
    ]
   }
  ],
